--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
         run: |
           export PYTHONIOENCODING=utf-8
           export LC_ALL=en_US.UTF-8
-          echo "# 📊 Comprehensive Test Report - Run #${{ github.run_number }}" > report.md
+          echo "# Test Report - Run #${{ github.run_number }}" > report.md
           echo "" >> report.md
           echo "Generated on: $(date)" >> report.md
           echo "" >> report.md
@@ -114,41 +114,53 @@ jobs:
           xml_file="artifacts/test-results-3.11/test_results/unit-test-results.xml"
           cov_file="artifacts/test-results-3.11/tests/reports/coverage_unit.xml"
           if [ -f "$xml_file" ]; then
-            echo "### 🐍 Python 3.11 Unit & Integration Tests" >> report.md
-            python3 scripts/generate_unit_report.py --xml "$xml_file" --cov "$cov_file" --out /tmp/unit_3.11.txt >> report.md
+            echo "### Python 3.11 Unit & Integration Tests" >> report.md
+            python3 scripts/generate_unit_report.py --xml "$xml_file" --cov "$cov_file" --out /tmp/unit_3.11.txt >> report.md || true
           else
-            echo "⚠️ No unit test results found for Python 3.11" >> report.md
+            echo "No unit test results found for Python 3.11" >> report.md
             echo "" >> report.md
           fi
 
           # Process Selenium tests
           selenium_xml="artifacts/selenium-test-results/test_results/selenium-test-results.xml"
           if [ -f "$selenium_xml" ]; then
-            echo "### 🌐 Selenium UI Tests" >> report.md
-            python3 scripts/generate_selenium_report.py --xml "$selenium_xml" --out /tmp/selenium.txt >> report.md
+            echo "### Selenium UI Tests" >> report.md
+            python3 scripts/generate_selenium_report.py --xml "$selenium_xml" --out /tmp/selenium.txt >> report.md || true
           else
-            echo "⚠️ No Selenium test results found" >> report.md
+            echo "No Selenium test results found" >> report.md
             echo "" >> report.md
           fi
 
           # Summary Table
-          echo "### 📋 Summary Table" >> report.md
-          echo "| Category | Total Tests | Passed ✅ | Failed ❌ | Errors 🔥 | Pass Rate | Coverage |" >> report.md
-          echo "|----------|-------------|-----------|-----------|-----------|-----------|----------|" >> report.md
+          echo "### Summary Table" >> report.md
+          echo "+---------------------+-------------+--------+--------+--------+-----------+----------+" >> report.md
+          echo "|     Category        | Total Tests | Passed | Failed | Errors | Pass Rate | Coverage |" >> report.md
+          echo "+---------------------+-------------+--------+--------+--------+-----------+----------+" >> report.md
+
           if [ -f /tmp/unit_3.11.txt ]; then
             cat /tmp/unit_3.11.txt
             IFS=',' read total passed failed errors coverage < /tmp/unit_3.11.txt
             passrate=0
-            if [ "$total" -gt 0 ]; then passrate=$((passed * 100 / total)); fi
-            echo "| Unit & Integration | $total | $passed | $failed | $errors | ${passrate}% | ${coverage}% |" >> report.md
+            if [ -n "$total" ] && [ "$total" -gt 0 ] && [ -n "$passed" ]; then
+              passrate=$((passed * 100 / total))
+            fi
+            printf "| %-19s | %11s | %6s | %6s | %6s | %9s | %8s |\n" "Unit & Integration" "$total" "$passed" "$failed" "$errors" "${passrate}%" "${coverage}%" >> report.md
+          else
+            printf "| %-19s | %11s | %6s | %6s | %6s | %9s | %8s |\n" "Unit & Integration" "N/A" "N/A" "N/A" "N/A" "N/A" "N/A" >> report.md
           fi
+
           if [ -f /tmp/selenium.txt ]; then
             cat /tmp/selenium.txt
             IFS=',' read total passed failed errors < /tmp/selenium.txt
             passrate=0
-            if [ "$total" -gt 0 ]; then passrate=$((passed * 100 / total)); fi
-            echo "| UI Tests | $total | $passed | $failed | $errors | ${passrate}% | N/A |" >> report.md
+            if [ -n "$total" ] && [ "$total" -gt 0 ] && [ -n "$passed" ]; then
+              passrate=$((passed * 100 / total))
+            fi
+            printf "| %-19s | %11s | %6s | %6s | %6s | %9s | %8s |\n" "UI Tests" "$total" "$passed" "$failed" "$errors" "${passrate}%" "N/A" >> report.md
+          else
+            printf "| %-19s | %11s | %6s | %6s | %6s | %9s | %8s |\n" "UI Tests" "N/A" "N/A" "N/A" "N/A" "N/A" "N/A" >> report.md
           fi
+
           if [ -f /tmp/unit_3.11.txt ] && [ -f /tmp/selenium.txt ]; then
             IFS=',' read utotal upassed ufailed uerrors ucoverage < /tmp/unit_3.11.txt
             IFS=',' read stotal spassed sfailed serrors < /tmp/selenium.txt
@@ -157,13 +169,17 @@ jobs:
             gfailed=$((ufailed + sfailed))
             gerrors=$((uerrors + serrors))
             gpassrate=0
-            if [ "$gtotal" -gt 0 ]; then gpassrate=$((gpassed * 100 / gtotal)); fi
-            echo "| **Total** | **$gtotal** | **$gpassed** | **$gfailed** | **$gerrors** | **${gpassrate}%** | N/A |" >> report.md
+            if [ -n "$gtotal" ] && [ "$gtotal" -gt 0 ] && [ -n "$gpassed" ]; then
+              gpassrate=$((gpassed * 100 / gtotal))
+            fi
+            printf "| %-19s | %11s | %6s | %6s | %6s | %9s | %8s |\n" "Total" "$gtotal" "$gpassed" "$gfailed" "$gerrors" "${gpassrate}%" "N/A" >> report.md
           fi
+
+          echo "+---------------------+-------------+--------+--------+--------+-----------+----------+" >> report.md
           echo "" >> report.md
-          echo "## 🎯 Overall Summary" >> report.md
+          echo "## Overall Summary" >> report.md
           echo "" >> report.md
-          echo "### 🔗 Detailed Reports" >> report.md
+          echo "### Detailed Reports" >> report.md
           echo "- [Unit & Integration Test Results (Python 3.11)](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" >> report.md
           echo "- [Selenium UI Test Results](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" >> report.md
           echo "- [Coverage Report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" >> report.md
@@ -182,7 +198,7 @@ jobs:
 
       - name: Generate step summary (Pipeline Summary First)
         run: |
-          echo "## 📊 Pipeline Summary" > $GITHUB_STEP_SUMMARY
+          echo "## Pipeline Summary" > $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           cat report.md >> $GITHUB_STEP_SUMMARY
 
@@ -200,14 +216,14 @@ jobs:
               const branch = context.ref.replace('refs/heads/', '');
               const fullReport = report + [
                 '',
-                '## 🔗 Quick Links',
-                `- 📊 [View Full Pipeline Results](${runUrl})`,
-                `- 📈 [Coverage Report](https://${context.repo.owner}.github.io/${context.repo.repo}/coverage/${branch}/index.html)`,
-                `- 📁 [Download All Artifacts](${runUrl}/artifacts)`,
-                `- 🏠 [Repository](${repoUrl})`,
+                '## Quick Links',
+                `- [View Full Pipeline Results](${runUrl})`,
+                `- [Coverage Report](https://${context.repo.owner}.github.io/${context.repo.repo}/coverage/${branch}/index.html)`,
+                `- [Download All Artifacts](${runUrl}/artifacts)`,
+                `- [Repository](${repoUrl})`,
                 '',
                 '---',
-                '*This report was automatically generated by the CI/CD pipeline*'
+                'This report was automatically generated by the CI/CD pipeline'
               ].join('\n');
               await github.rest.issues.createComment({
                 ...context.issue,
