--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,15 @@ jobs:
             echo 'No .coverage data file found.' >> $GITHUB_STEP_SUMMARY
           fi
 
+      # Show Markdown coverage table in Actions summary tab
+      - name: Markdown coverage table
+        run: |
+          if [ -f artifacts/unit/coverage.xml ]; then
+            python3 scripts/coverage_to_md.py artifacts/unit/coverage.xml >> $GITHUB_STEP_SUMMARY
+          else
+            echo 'No coverage XML file found for Markdown table.' >> $GITHUB_STEP_SUMMARY
+          fi
+
       # Optionally upload coverage.xml as an artifact (for local download)
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
