--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,12 @@ jobs:
       # Show Markdown coverage table in Actions summary tab
       - name: Coverage Report
         run: |
-          pytest --cov --cov-report=html:tests/reports
+          pytest --cov --cov-report=xml:artifacts/unit/coverage.xml --cov-report=html:tests/reports
+          if [ -f artifacts/unit/coverage.xml ]; then
+            python3 scripts/coverage_to_md.py artifacts/unit/coverage.xml >> $GITHUB_STEP_SUMMARY
+          else
+            echo 'No coverage XML file found for Markdown table.' >> $GITHUB_STEP_SUMMARY
+          fi
           if [ -f tests/reports/index.html ]; then
             echo '### [Open HTML Coverage Report](./tests/reports/index.html)' >> $GITHUB_STEP_SUMMARY
             echo 'HTML coverage report generated at tests/reports/index.html' >> $GITHUB_STEP_SUMMARY
