--- a/pytest.ini
+++ b/pytest.ini
@@ -47,6 +47,6 @@ env =
 
 # Logging
 log_cli = true
-log_cli_level = INFO
+log_cli_level = ERROR
 log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
 log_cli_date_format = %Y-%m-%d %H:%M:%S 
